--- a/October/2주차.md
+++ b/October/2주차.md
@@ -1,5 +1,5 @@
 ------------------
-빅스비 - TTS에 대해 알아보기
+빅스비 - AI 기술이 적용된 TTS에 대해 알아보기
 
 삼성전자의 Galaxy 시리즈 스마트폰을 사용하는 User라면 Bixby에 대해 들어봤거나,
 혹은 유용하게 잘 쓰는 사람도 있을 것이다.
@@ -36,7 +36,23 @@
 >> 목소리라고 착각했던 것이다. 실제 투표 결과는 더 충격적이었다. TTS로 만든 합성음이 더 김예원 같다고 꼽은 비율이
 >> 무려 50%를 넘었다.
 
+>> 이러한 결과는 바로 최신 AI 기술이 적용되어 가능했다. 그 과정을 알아보면,
+>> 먼저 목소리를 녹음할 대상(셀럽)이 약 4시간 정도동안 녹음을 한다.
+>> 그 과정에서 목소리 톤, 억양 등을 모사하도록 AI 기술이 적용된 TTS 모델을 학습시킨다.
+>>
+>> ![TTSprocess](https://user-images.githubusercontent.com/34376342/97543287-5e0ffa80-1a0b-11eb-94c8-34c38a62f5a6.PNG)
+>> 
+>> 이 때, 학습 데이터 부족을 해결하기 위해 기본 목소리 모델을 활용한다.
+>> 이를 전이 학습(Transfer Learning)이라고 하며, 이를 통해 셀럽들의 목소리 톤과 억양으로 추가 학습하게 되는데,
+>> 기본 모델의 도움으로 학습이 용이해진다.
+>>
+>> 이렇게 학습된 TTS 모델은 TTS 모델은 임의의 문장에 대해서 학습한 톤과 억양을 살려 말소리를 합성해내게 된다.
+>> 이렇게 해서 셀럽들의 목소리가 빅스비에서 나오게 된다.
+>>
+>> 예전에는 새로운 목소리를 만들어내기 위해 20시간 이상의 녹음 분량이 필요했다고 한다.
+>> 하지만 지금은 엄청난 기술 발전으로 인해 20~30분 분량이면 충분히 새로운 목소리를 만들어낼 수 있다고 한다.
 
-
-
+---------------------------
+여기까지 삼성전자 Bixby의 AI TTS 기술에 대해 알아보았다.
+다음 주차에는 목소리를 학습시키는 '전이 학습(Transfer Learning)'에 대해 알아보도록 하겠다.
 
