--- a/October/2주차.md
+++ b/October/2주차.md
@@ -14,43 +14,43 @@
 어떻게 된 것인지 궁금하여 빅스비의 목소리에 대해 알아보았다.
 ---------------------
 
-> 어떻게 강소라씨, 김소현씨, 김예원씨가 말을 하는 거죠?
->> 빅스비에서 좋아하는 연예인의 목소리를 선택한 후 대화를 나눠보았나요?
->> 사람들 왈 : 직접 녹음한 걸 그대로 틀어주는 건가요?
->>> 대답은 "아니오!" 이다.
->>> 그 비밀은 바로 TTS라는 기술에 있는데, TTS 라는 기술을 통해 어떤 말이든
->>> 실시간으로 합성해주는 것이다.
+* 어떻게 강소라씨, 김소현씨, 김예원씨가 말을 하는 거죠?
+> 빅스비에서 좋아하는 연예인의 목소리를 선택한 후 대화를 나눠보았나요?
+> 사람들 왈 : 직접 녹음한 걸 그대로 틀어주는 건가요?
+>> 대답은 "아니오!" 이다.
+>> 그 비밀은 바로 TTS라는 기술에 있는데, TTS 라는 기술을 통해 어떤 말이든
+>> 실시간으로 합성해주는 것이다.
 
-> TTS란?
->> Text-To-Speech, 즉 글을 말로 바꿔주는 기술.
->> 사람으로 치면 '입'에 해당되는 역할을 하는 것인데
->> 이제 기술 수준이 사람과 구분하기 어려운 수준에 도달하였다고 할 수 있다.
+* TTS란?
+> Text-To-Speech, 즉 글을 말로 바꿔주는 기술.
+> 사람으로 치면 '입'에 해당되는 역할을 하는 것인데
+> 이제 기술 수준이 사람과 구분하기 어려운 수준에 도달하였다고 할 수 있다.
 
->> 사실 TTS라는 기술은 옛날부터 개발되어 있었고, 이는 한 문자씩 읽어주어 굉장히 부자연스러웠다.
->> 하지만 이제는 굉장히 자연스러워져서 현재 말하고 있는 것이 사람인지 기계인지 잘 구분을 못하는
->> 수준까지 올라왔다.
+> 사실 TTS라는 기술은 옛날부터 개발되어 있었고, 이는 한 문자씩 읽어주어 굉장히 부자연스러웠다.
+> 하지만 이제는 굉장히 자연스러워져서 현재 말하고 있는 것이 사람인지 기계인지 잘 구분을 못하는
+> 수준까지 올라왔다.
 
->> 얼마 전 삼성전자에서 '진짜 김예원 목소리를 찾아라'라는 행사를 진행했었고, 나도 참여했었다.
->> 나는 각각 보기의 목소리를 들어보기 전까지는 당당했었다. 이 정도도 구분 못하겠느냐며.
->> 하지만 이벤트를 참여한 후 결과를 보니 오답을 선택했었다. 즉, 기계의 목소리를 배우 김예원씨의
->> 목소리라고 착각했던 것이다. 실제 투표 결과는 더 충격적이었다. TTS로 만든 합성음이 더 김예원 같다고 꼽은 비율이
->> 무려 50%를 넘었다.
+> 얼마 전 삼성전자에서 '진짜 김예원 목소리를 찾아라'라는 행사를 진행했었고, 나도 참여했었다.
+> 나는 각각 보기의 목소리를 들어보기 전까지는 당당했었다. 이 정도도 구분 못하겠느냐며.
+> 하지만 이벤트를 참여한 후 결과를 보니 오답을 선택했었다. 즉, 기계의 목소리를 배우 김예원씨의
+> 목소리라고 착각했던 것이다. 실제 투표 결과는 더 충격적이었다. TTS로 만든 합성음이 더 김예원 같다고 꼽은 비율이
+> 무려 50%를 넘었다.
 
->> 이러한 결과는 바로 최신 AI 기술이 적용되어 가능했다. 그 과정을 알아보면,
->> 먼저 목소리를 녹음할 대상(셀럽)이 약 4시간 정도동안 녹음을 한다.
->> 그 과정에서 목소리 톤, 억양 등을 모사하도록 AI 기술이 적용된 TTS 모델을 학습시킨다.
->>
->> ![TTSprocess](https://user-images.githubusercontent.com/34376342/97543287-5e0ffa80-1a0b-11eb-94c8-34c38a62f5a6.PNG)
->> 
->> 이 때, 학습 데이터 부족을 해결하기 위해 기본 목소리 모델을 활용한다.
->> 이를 전이 학습(Transfer Learning)이라고 하며, 이를 통해 셀럽들의 목소리 톤과 억양으로 추가 학습하게 되는데,
->> 기본 모델의 도움으로 학습이 용이해진다.
->>
->> 이렇게 학습된 TTS 모델은 TTS 모델은 임의의 문장에 대해서 학습한 톤과 억양을 살려 말소리를 합성해내게 된다.
->> 이렇게 해서 셀럽들의 목소리가 빅스비에서 나오게 된다.
->>
->> 예전에는 새로운 목소리를 만들어내기 위해 20시간 이상의 녹음 분량이 필요했다고 한다.
->> 하지만 지금은 엄청난 기술 발전으로 인해 20~30분 분량이면 충분히 새로운 목소리를 만들어낼 수 있다고 한다.
+> 이러한 결과는 바로 최신 AI 기술이 적용되어 가능했다. 그 과정을 알아보면,
+> 먼저 목소리를 녹음할 대상(셀럽)이 약 4시간 정도동안 녹음을 한다.
+> 그 과정에서 목소리 톤, 억양 등을 모사하도록 AI 기술이 적용된 TTS 모델을 학습시킨다.
+
+> ![TTSprocess](https://user-images.githubusercontent.com/34376342/97543287-5e0ffa80-1a0b-11eb-94c8-34c38a62f5a6.PNG)
+ 
+> 이 때, 학습 데이터 부족을 해결하기 위해 기본 목소리 모델을 활용한다.
+> 이를 전이 학습(Transfer Learning)이라고 하며, 이를 통해 셀럽들의 목소리 톤과 억양으로 추가 학습하게 되는데,
+> 기본 모델의 도움으로 학습이 용이해진다.
+
+> 이렇게 학습된 TTS 모델은 TTS 모델은 임의의 문장에 대해서 학습한 톤과 억양을 살려 말소리를 합성해내게 된다.
+> 이렇게 해서 셀럽들의 목소리가 빅스비에서 나오게 된다.
+
+> 예전에는 새로운 목소리를 만들어내기 위해 20시간 이상의 녹음 분량이 필요했다고 한다.
+> 하지만 지금은 엄청난 기술 발전으로 인해 20~30분 분량이면 충분히 새로운 목소리를 만들어낼 수 있다고 한다.
 
 ---------------------------
 여기까지 삼성전자 Bixby의 AI TTS 기술에 대해 알아보았다.
