--- a/October/3주차.md
+++ b/October/3주차.md
@@ -18,14 +18,15 @@
 > 혹은 전이학습(transfer learning)이 필요하다.
 
 > 전이 학습은 학습 데이터의 수가 적을때도 효과적이며, 학습 속도도 빠르다.
-> 또한, 전이학습 없이 학습하는 것보다 훨씬 높은 정확도를 제공한다는 장점이 있다.
+> 또한, 전이 학습 없이 학습하는 것보다 훨씬 높은 정확도를 제공한다.
+> 이미 잘 훈련된 모델이 있고, 특히 해당 모델과 유사한 문제를 해결시 전이 학습을 사용한다.
 
 > 전이 학습에 대해 쉽게 말하자면, 사과 깎는 방법을 읽힌 AI에게 배를 깎도록 하는 것, 체스를 익힌 AI에게 장기를 두게 하거나,
 > 비가 올 확률을 예측하는 AI에게 눈이 올 확률을 예측하게 하는 것이라고 할 수 있다.
 
 * 딥러닝의 뛰어난 성과를 보여주는 '이미지 분류 분야'
 > 이미지 분류 문제의 목적은 특정 이미지들을 주어진 카테고리로 정확하게 분류하는 것이다. 
-> 이미지 분류에서 전통적으로 유명한 문제로는 '고양이 vs. 강아지' 사진 분류 문제가 있다.
+> 이미지 분류에서 전통적으로 유명한 문제로는 '고양이 vs 강아지' 사진 분류 문제가 있다.
 
 > 특히 이미지 분류 문제는 전이 학습으로 접근하는 경우가 대부분이다.
 
@@ -46,4 +47,21 @@
 > 주로 완전 연결 계층(fully connected layer)으로 이루어져 있다.
 > 완전 연결 계층이란 모든 계층의 뉴런이 이전 층의 출력 노드와 하나도 빠짐없이 모두 연결되어 있는 층을 말한다.
 > 분류기(Classifier)의 최종 목표 : 추출된 특징을 잘 학습해서 이미지를 알맞은 카테고리로 분류하는 것(image classification)
+
+> ![CNN process](https://user-images.githubusercontent.com/34376342/97602676-f11e5400-1a4e-11eb-818d-57919a6a6b76.PNG)
+
+> 모델의 첫 번째 층은 "일반적인(general)" 특징을 추출하도록 하는 학습이 이루어지는 반면에, 모델의 마지막 층에
+> 가까워질수록 특정 데이터셋 또는 특정 문제에서만 나타날 수 있는 "구체적인(specific)" 특징을 추출해내도록 하는 고도화된
+> 학습이 이루어진다.
+
+- Convolution이란?
+> ![image](https://user-images.githubusercontent.com/34376342/97603658-02b42b80-1a50-11eb-92ea-c623c0ca5688.png)
+
+> 데이터의 특징을 추출하는 과정으로 데이터에 각 성분의 인접 성분들을 조사해 특징을 파악하고 파악한 특징을 한장으로 
+> 도출시키는 과정이다. 여기서 도출된 장을 Convolution Layer라고 한다. 이 과정은 하나의 압축 과정이며 파라미터의 갯수를 
+> 효과적으로 줄여주는 역할을 한다.
+
+- Pooling
+> 이는 Convolution 과정을 거친 레이어의 사이즈를 줄여주는 과정이다. 단순히 데이터의 사이즈를 줄여주고, 
+> 노이즈를 상쇄시키고 미세한 부분에서 일관적인 특징을 제공합니다.
 
