--- a/October/3주차.md
+++ b/October/3주차.md
@@ -48,7 +48,8 @@
 > 완전 연결 계층이란 모든 계층의 뉴런이 이전 층의 출력 노드와 하나도 빠짐없이 모두 연결되어 있는 층을 말한다.   
 > 분류기(Classifier)의 최종 목표 : 추출된 특징을 잘 학습해서 이미지를 알맞은 카테고리로 분류하는 것(image classification)
 
-> ![CNN process](https://user-images.githubusercontent.com/34376342/97602676-f11e5400-1a4e-11eb-818d-57919a6a6b76.PNG)
+> ![CNN process](https://user-images.githubusercontent.com/34376342/97602676-f11e5400-1a4e-11eb-818d-57919a6a6b76.PNG)   
+> ![image](https://user-images.githubusercontent.com/34376342/97673199-b956f100-1ace-11eb-9e6c-4648fdadd798.png)
 
 > 모델의 첫 번째 층은 "일반적인(general)" 특징을 추출하도록 하는 학습이 이루어지는 반면에, 모델의 마지막 층에
 > 가까워질수록 특정 데이터셋 또는 특정 문제에서만 나타날 수 있는 "구체적인(specific)" 특징을 추출해내도록 하는 고도화된
@@ -83,4 +84,4 @@
 > 계층을 학습시켜서 내 프로젝트에 더 적합한 모델로 발전시킬 수 있다.
 
 * 3. Convolutional base는 고정시키고, classifier만 새로 학습시키기
-> 이 경우는 보다 극단적인 상황일 때 생각할 수 있는 케이스이다. convolutional base는 건들지 않고 그대로 두면서 특징 추출 메커니즘으로써 활용하고, classifier만 재학습시키는 방법을 씁니다. 이 방법은 컴퓨팅 연산 능력이 부족하거나 데이터셋이 너무 작을때, 그리고 내가 풀고자 하는 문제의 사전학습모델이 이미 학습한 데이터셋과 매우 비슷할 때 고려해볼 수 있다.
+> 이 경우는 보다 극단적인 상황일 때 생각할 수 있는 케이스이다. convolutional base는 건들지 않고 그대로 두면서 특징 추출 메커니즘으로써 활용하고, classifier만 재학습시키는 방법을 쓴다. 이 방법은 컴퓨팅 연산 능력이 부족하거나 데이터셋이 너무 작을때, 그리고 내가 풀고자 하는 문제의 사전학습모델이 이미 학습한 데이터셋과 매우 비슷할 때 고려해볼 수 있다.
