--- a/October/3주차.md
+++ b/October/3주차.md
@@ -69,7 +69,7 @@
 # 사전에 학습된 모델을 내 프로젝트에 맞게 재정의하기
 > 사전 학습된 모델을 나의 프로젝트에 맞게 재정의한다면, 원래 모델에 있던 classifier를 없애는 것으로 시작한다.
 > 원래의 classifier는 삭제하고, 내 목적에맞는 새로운 classifier를 추가한다. 그 후 마지막으로는 새롭게 만들어진 나의 모델을
-> 다음 세 가지 전략 중 한 가지 방법을 이용해 파인튜닝(fine-tune)을 진행합니다.
+> 다음 세 가지 전략 중 한 가지 방법을 이용해 파인튜닝(fine-tune)을 진행한다.
 
 * 1. 전체 모델을 새로 학습시키기
 > 방법은 사전학습 모델의 구조만 사용하면서, 내 데이터셋에 맞게 전부 새로 학습시키는 방법이다.   
