--- a/October/3주차.md
+++ b/October/3주차.md
@@ -51,8 +51,8 @@
 > ![CNN process](https://user-images.githubusercontent.com/34376342/97602676-f11e5400-1a4e-11eb-818d-57919a6a6b76.PNG)   
 > ![image](https://user-images.githubusercontent.com/34376342/97673199-b956f100-1ace-11eb-9e6c-4648fdadd798.png)
 
-> 모델의 첫 번째 층은 "일반적인(general)" 특징을 추출하도록 하는 학습이 이루어지는 반면에, 모델의 마지막 층에
-> 가까워질수록 특정 데이터셋 또는 특정 문제에서만 나타날 수 있는 "구체적인(specific)" 특징을 추출해내도록 하는 고도화된
+> 모델의 첫 번째 층은 **일반적인(general)** 특징을 추출하도록 하는 학습이 이루어지는 반면에, 모델의 마지막 층에
+> 가까워질수록 특정 데이터셋 또는 특정 문제에서만 나타날 수 있는 **구체적인(specific)** 특징을 추출해내도록 하는 고도화된
 > 학습이 이루어진다.
 
 - Convolution이란?
