--- a/November/1주차.md
+++ b/November/1주차.md
@@ -11,5 +11,5 @@
 
 Detection VS Tracking
 ---
-**Face Detection** : *한 프레임*(*사진 한 개*)에서 얼굴의 위치를 탐지
-**Face Tracking** : Detection한 결과를 *동영상* 안에서 계속 추적
+**Face Detection** : **한 프레임**(**사진 한 개**)에서 얼굴의 위치를 탐지  
+**Face Tracking** : Detection한 결과를 **동영상** 안에서 계속 추적
