--- a/November/1주차/1주차_얼굴 인식.md
+++ b/November/1주차/1주차_얼굴 인식.md
@@ -29,6 +29,11 @@ Detection VS Tracking
 3. opencv 설치(import cv2 사용하려면) : pip install cv2 : pip install opencv-python
 4. matplotlib 설치(import numpy, matplotlib 등) : pip install matplotlib
 
+## Model 다운받기
+* https://github.com/davisking/dlib-models/blob/master/shape_predictor_68_face_landmarks.dat.bz2
+* https://github.com/davisking/dlib-models/blob/master/dlib_face_recognition_resnet_model_v1.dat.bz2
+
+
 ## 실습 코드
 ``` python
 import dlib, cv2 # dlib : Face detection + Face recognition, cv2 : OpenCV : 이미지 작업
