--- a/November/1주차/1주차_얼굴 인식.md
+++ b/November/1주차/1주차_얼굴 인식.md
@@ -1,4 +1,5 @@
 
+
 # AI로 얼굴 인식하기(Face Recognition)
 
 * **Face Detection**
@@ -160,4 +161,22 @@ plt.savefig('result/output.png')
 plt.show()
 
 ```
+
+## 학습시킨 사진
+![songkangho1](https://user-images.githubusercontent.com/34376342/99348591-4b3b6800-28dd-11eb-96dc-1d49674edcef.jpg)  
+**송강호**
+
+![choiwoosik1](https://user-images.githubusercontent.com/34376342/99348671-73c36200-28dd-11eb-850f-7113b84a8a75.jpg)  
+**최우식**
+
+![parksodam1](https://user-images.githubusercontent.com/34376342/99348764-abcaa500-28dd-11eb-94a7-edc6d8f9a761.jpg)  
+**박소담**
+
+## 실행 결과
+![output](https://user-images.githubusercontent.com/34376342/99348512-1deeba00-28dd-11eb-819d-d50fd2d53ce5.png)  
+
+
+## 참고
+* 유클리드 거리 값을 어떻게 설정해주냐에 따라 정확도의 범위가 크게 차이가 남.
+* 서로 얼굴의 특징이 뚜렷한 사람이라면 거리값을 0.6정도 전후로 설정해도 되지만 그렇지 않다면 어느 정도 낮추어야 정확도가 향상됨. 너무 큰 범위라면 다른 사람의 얼굴이라도 학습시킨 사람의 얼굴로 판단함.
 
