--- a/October/3주차/3주차.md
+++ b/October/3주차/3주차.md
@@ -64,7 +64,7 @@
 
 - Pooling
 > 이는 Convolution 과정을 거친 레이어의 사이즈를 줄여주는 과정이다. 단순히 데이터의 사이즈를 줄여주고, 
-> 노이즈를 상쇄시키고 미세한 부분에서 일관적인 특징을 제공합니다.
+> 노이즈를 상쇄시키고 미세한 부분에서 일관적인 특징을 제공한다.
 
 # 사전에 학습된 모델을 내 프로젝트에 맞게 재정의하기
 > 사전 학습된 모델을 나의 프로젝트에 맞게 재정의한다면, 원래 모델에 있던 classifier를 없애는 것으로 시작한다.
